--- a/navbar.html
+++ b/navbar.html
@@ -5,80 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar</title>
-    <style>
-        body{
-            margin: 0px;
-            padding: 0px;
-            font-family: sans-serif;
-        }
-        .container{
-            width: 100%;
-            background-color: white;
-            box-shadow: 1px 1px 10px #CCCCCC;
-            display: flex;
-        }
-
-        .logo{
-            width: 30%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .logo h1{
-            font-size: 15px;
-            margin: 10px;
-        }
-        
-        .primary-menu{
-            width: 40%;
-            display: flex;
-            justify-content: center;
-        }
-
-        .primary-menu .menu{
-            display: flex;
-            list-style-type: none;
-            
-        }
-        .primary-menu .menu li{
-            margin: 15px;
-            font-size: 13px;
-            font-weight: 400;
-            color: #4f5665;
-            cursor: pointer;
-        }
-        .primary-menu .menu li:hover{
-            color: #6A4029;
-            font-weight: 700;
-        }
-
-        .secondary-menu{
-            width: 30%;
-        }
-        .secondary-menu .menu{
-            display: flex;
-            list-style-type: none;
-        }
-        .secondary-menu .menu li{
-            margin: 15px;
-            font-size: 13px;
-            cursor: pointer;
-        }
-        .secondary-menu .menu li a{
-            text-decoration: none;
-            font-weight: 600;
-        }
-        .login{
-            color: #000;
-        }
-        .signup{
-            background-color: #ffba33;
-            padding: 10px 25px;
-            color: #6A4029;
-            border-radius: 100px;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
 </head>
 <body>
     <div class="container">
