--- a/navbar_after_login.html
+++ b/navbar_after_login.html
@@ -4,77 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test test</title>
-    <style>
-        body{
-            margin: 0px;
-            padding: 0px;
-            font-family: sans-serif;
-        }
-        .container{
-            width: 100%;
-            background-color: white;
-            box-shadow: 1px 1px 10px #CCCCCC;
-            display: flex;
-        }
-
-        .logo{
-            width: 30%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .logo h1{
-            font-size: 15px;
-            margin: 10px;
-        }
-        
-        .primary-menu{
-            width: 40%;
-            display: flex;
-            justify-content: center;
-        }
-
-        .primary-menu .menu{
-            display: flex;
-            list-style-type: none;
-            
-        }
-        .primary-menu .menu li{
-            margin: 15px;
-            font-size: 13px;
-            font-weight: 400;
-            color: #4f5665;
-            cursor: pointer;
-        }
-        .primary-menu .menu li:hover{
-            color: #6A4029;
-            font-weight: 700;
-        }
-
-        .secondary-menu{
-            width: 30%;
-        }
-        .secondary-menu .menu{
-            display: flex;
-            list-style-type: none;
-        }
-        .secondary-menu .menu li{
-            margin: 15px;
-            cursor: pointer;
-        }
-        .image{
-            width: 23px;
-            height: 23px;
-            overflow: hidden;
-            border-radius: 50%;
-        }
-        .image img{
-            width: 100%;
-            height: auto;
-            margin-top: -5px;
-        }
-    </style>
+    <title>Navbar after Login</title>
+    <link rel="stylesheet" type="text/css" href="css/navbarafter.css">
 </head>
 <body>
     <div class="container">
@@ -111,12 +42,12 @@
                 </li>
                 <li>
                     <a href="#">
-                        <img src="chat.png" width="20px" width="23px">
+                        <img src="img/chat.png" width="20px" width="23px">
                     </a>
                 </li>
                 <li class="image">
                     <a href="#">
-                        <img src="image.png">
+                        <img src="img/image.png">
                     </a>
                 </li>          
             </ul>
