--- a/product.html
+++ b/product.html
@@ -4,55 +4,99 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .grid-container{
-            display: grid;
-            justify-content: center;
-            grid-template-columns: 130px 130px 130px 130px;
-            grid-template-rows: 210px 210px 210px;
-            grid-column-gap: 20px;
-            grid-row-gap: 20px;
-        }
-        .grid-container .grid-item{
-            /* border: 1px solid rgba(0, 0, 0, 0.8); */
-            box-shadow: 1px 8px 12px #CCCCCC;
-            border-radius: 10%;
-            /* background-color: aquamarine; */
-            font-family: sans-serif;
-            font-size: 10px;
-        }
-        .grid-container .grid-item .round-border{
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            overflow: hidden;
-        }
-        .grid-container .grid-item .round-border .image{
-            
-        }
-    </style>
+    <title>Product list</title>
+    <link rel="stylesheet" type="text/css" href="css/product.css">
 </head>
 <body>
-    <div class="grid-container">
-            <div class="grid-item">
-                <div class="round-border">
-                    <img src="4.png" alt="" class="image">
-                </div>
-                <h1>Vergie tomato</h1>
-                <h2>IDR 34000</h2>
+    <div class="row">
+        <div class="product">
+            <div class="round-border">
+                <img src="img/6.png" alt="" width="auto" height="100%" style="margin-left: -35px;">
             </div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
-            <div class="grid-item">6</div>
+            <h1>Salty Rice</h1>
+            <h2>IDR 32000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/2.png" alt="" width="100%" height="auto" style="margin-top: -15px;">
+            </div>
+            <h1>Hazelnut Latte</h1>
+            <h2>IDR 30000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/3.png" alt="" width="100%" height="auto">
+            </div>
+            <h1>Fried Rice</h1>
+            <h2>IDR 31000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/5.png" alt="" width="auto" height="100%" style="margin-left: -15px;">
+            </div>
+            <h1>Drum Sticks</h1>
+            <h2>IDR 30000</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="product">
+            <div class="round-border">
+                <img src="img/6.png" alt="" width="auto" height="100%" style="margin-left: -35px;">
+            </div>
+            <h1>Salty Rice</h1>
+            <h2>IDR 32000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/2.png" alt="" width="100%" height="auto" style="margin-top: -15px;">
+            </div>
+            <h1>Hazelnut Latte</h1>
+            <h2>IDR 30000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/3.png" alt="" width="100%" height="auto">
+            </div>
+            <h1>Fried Rice</h1>
+            <h2>IDR 31000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/5.png" alt="" width="auto" height="100%" style="margin-left: -15px;">
+            </div>
+            <h1>Drum Sticks</h1>
+            <h2>IDR 30000</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="product">
+            <div class="round-border">
+                <img src="img/6.png" alt="" width="auto" height="100%" style="margin-left: -35px;">
+            </div>
+            <h1>Salty Rice</h1>
+            <h2>IDR 32000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/2.png" alt="" width="100%" height="auto" style="margin-top: -15px;">
+            </div>
+            <h1>Hazelnut Latte</h1>
+            <h2>IDR 30000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/3.png" alt="" width="100%" height="auto">
+            </div>
+            <h1>Fried Rice</h1>
+            <h2>IDR 31000</h2>
+        </div>
+        <div class="product">
+            <div class="round-border">
+                <img src="img/5.png" alt="" width="auto" height="100%" style="margin-left: -15px;">
+            </div>
+            <h1>Drum Sticks</h1>
+            <h2>IDR 30000</h2>
+        </div>
     </div>
 </body>
 </html>
