--- a/product.html
+++ b/product.html
@@ -50,7 +50,7 @@
             <div class="round-border">
                 <img src="img/2.png" alt="" width="100%" height="auto" style="margin-top: -15px;">
             </div>
-            <h1>Hazelnut Latte</h1>
+            <h1>Hazelnut Coffee Latte</h1>
             <h2>IDR 30000</h2>
         </div>
         <div class="product">
