--- a/navbarsearch.html
+++ b/navbarsearch.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
-    <link rel="stylesheet" href="./css/navbar.css">
+    <title>NavbarSearch</title>
+    <link rel="stylesheet" type="text/css" href="css/navbarsearch.css">
 </head>
 <body>
     <div class="container">
@@ -32,14 +32,14 @@
             </ul>
         </div>
         <div class="secondary-menu">
-            <ul class="menu">
-                <li>
-                    <a href="#" class="login">Login</a>
-                </li>
-                <li>
-                    <a href="#" class="signup">Sign Up</a>
-                </li>                
-            </ul>
+            <input type="search" name="" placeholder="search">
+            <div class="chat">
+                <div class="notif">1</div>
+                <img src="./img/chat.png" alt="">
+            </div>
+            <div class="image">
+                <img src="./img/image.png">
+            </div>
         </div>
     </div>
 </body>
